[gd_scene load_steps=20 format=2]

[ext_resource path="res://Script/PlayerStack.gd" type="Script" id=1]
[ext_resource path="res://Script/HoleSpawner.gd" type="Script" id=2]
[ext_resource path="res://Shader/BackPlane.gdshader" type="Shader" id=3]
[ext_resource path="res://Script/ColorfulMeshInstance.gd" type="Script" id=4]
[ext_resource path="res://Util/ScrollingEnv.gd" type="Script" id=5]
[ext_resource path="res://Script/DeathArea.gd" type="Script" id=6]
[ext_resource path="res://Interface/Interface.tscn" type="PackedScene" id=7]
[ext_resource path="res://Shader/background.gdshader" type="Shader" id=8]
[ext_resource path="res://Script/BackgroundShaderObject.gd" type="Script" id=9]
[ext_resource path="res://Script/NextSpawner.gd" type="Script" id=10]

[sub_resource type="ViewportTexture" id=11]
flags = 4
viewport_path = NodePath("Viewport")

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 3 )
shader_param/base_color = Plane( 0.5, 0.5, 0.5, 0 )
shader_param/top_color = Plane( 0.5, 0.5, 0.5, 0 )

[sub_resource type="PlaneMesh" id=1]
material = SubResource( 4 )
size = Vector2( 1000, 1000 )

[sub_resource type="Environment" id=10]
background_mode = 5
background_energy = 0.0
ambient_light_energy = 0.0
ambient_light_sky_contribution = 0.0
tonemap_exposure = 0.0

[sub_resource type="BoxShape" id=7]
extents = Vector3( 100, 1, 100 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 11, 1, 250 )

[sub_resource type="PlaneMesh" id=6]
size = Vector2( 1000, 1000 )
center_offset = Vector3( -510, 0, 0 )

[sub_resource type="ShaderMaterial" id=9]
render_priority = 100
shader = ExtResource( 8 )
shader_param/base_color_b = Plane( 0.55, 0.7, 0.7, 0 )
shader_param/top_color_b = Plane( 0.75, 0.7, 0.8, 0 )
shader_param/base_color = Plane( 0.55, 0.7, 0.78, 0 )
shader_param/top_color = Plane( 0.75, 0.7, 1, 0 )

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 8 )
shader_param/base_color_b = Plane( 0.55, 0.7, 0.7, 0 )
shader_param/top_color_b = Plane( 0.75, 0.7, 0.8, 0 )
shader_param/base_color = Plane( 0.55, 0.7, 0.78, 0 )
shader_param/top_color = Plane( 0.75, 0.7, 1, 0 )

[node name="Spatial" type="Spatial"]

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = SubResource( 11 )
expand = true
stretch_mode = 1

[node name="Surf" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -18.0
margin_top = -16.0
margin_right = 15.0
margin_bottom = 14.0
focus_mode = 1
mouse_default_cursor_shape = 13
shortcut_in_tooltip = false
flat = true

[node name="Interface" parent="." instance=ExtResource( 7 )]
game_manager_path = NodePath("../Viewport/PlayerStack")

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 540, 960 )
usage = 3
render_target_v_flip = true
render_target_clear_mode = 1
render_target_update_mode = 3
shadow_atlas_quad_0 = 0
shadow_atlas_quad_1 = 0
shadow_atlas_quad_2 = 0
shadow_atlas_quad_3 = 0

[node name="FloorPlane" type="MeshInstance" parent="Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0 )
mesh = SubResource( 1 )
skeleton = NodePath("../..")
script = ExtResource( 4 )

[node name="Camera" type="Camera" parent="Viewport"]
transform = Transform( -1, 8.74227e-08, 0, 6.18172e-08, 0.707107, 0.707107, 6.18172e-08, 0.707107, -0.707107, 0, 10, -10 )
environment = SubResource( 10 )
current = true
fov = 80.0
far = 500.0

[node name="PlayerStack" type="Spatial" parent="Viewport"]
script = ExtResource( 1 )
start_sound = "snap0"

[node name="HoleSpawner" type="Spatial" parent="Viewport"]
script = ExtResource( 2 )

[node name="NextSpawner" type="Spatial" parent="Viewport"]
script = ExtResource( 10 )

[node name="CollapseDectectionTrigger" type="Area" parent="Viewport"]
script = ExtResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="Viewport/CollapseDectectionTrigger"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
shape = SubResource( 7 )

[node name="ScrollingEnv" type="Spatial" parent="Viewport"]
script = ExtResource( 5 )

[node name="StaticBody" type="StaticBody" parent="Viewport/ScrollingEnv"]

[node name="CollisionShape" type="CollisionShape" parent="Viewport/ScrollingEnv/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
shape = SubResource( 5 )

[node name="FakeSide1" type="MeshInstance" parent="Viewport/ScrollingEnv"]
mesh = SubResource( 6 )
skeleton = NodePath("../../..")
material/0 = SubResource( 9 )
script = ExtResource( 9 )

[node name="FakeSide2" type="MeshInstance" parent="Viewport/ScrollingEnv"]
transform = Transform( -1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 6 )
skeleton = NodePath("../../..")
material/0 = SubResource( 8 )
script = ExtResource( 9 )

[connection signal="focus_entered" from="Surf" to="Viewport/PlayerStack" method="_on_Surf_focus_entered"]
[connection signal="focus_exited" from="Surf" to="Viewport/PlayerStack" method="_on_Surf_focus_exited"]
